--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -25,10 +25,6 @@ ul {
 	margin: 0;
 }
 
-video {
-	outline: none;
-}
-
 /* nav */
 nav {
 	width: 100%;
@@ -51,9 +47,17 @@ nav > ul > li > a {
 	color:var(--soft-white);
 }
 
-/* 영상 */
-video {
+/* video */
+.video {
+	position: relative;
 	width: 100%;
+	padding-bottom: 56.26%;
+}
+iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	max-height: 365px;
 }
 
 /* title-area */
