--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -25,6 +25,18 @@ ul {
 	margin: 0;
 }
 
+button {
+	border: none;
+	background: none;
+}
+button:hover {
+	cursor: pointer;
+}
+
+:focus {
+	outline: none;
+}
+
 /* nav */
 nav {
 	width: 100%;
@@ -57,7 +69,6 @@ iframe {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	max-height: 365px;
 }
 
 /* title-area */
@@ -118,6 +129,7 @@ iframe {
 }
 .channel-img {
 	width: 35px;
+	min-width: 35px;
 	height: 35px;
 	margin-right: 10px;
 	border-radius: 50%;
@@ -135,27 +147,159 @@ iframe {
 }
 .channel-subscribe {
 	width: 50px;
-	border: none;
-	background: none;
 	font-size: 10.8pt;
 	color: var(--text-red);
 }
-.channel-subscribe:hover {
-	cursor: pointer;
-}
 
-/* comments-area */
-.comments-area {
+/* comments-close */
+.comments-close {
+	font-size: 10.2pt;
+	border-bottom: 2px solid var(--grey);
+}
+.comments-close > a {
 	height: 48px;
+	margin: 0 10px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 10px;
-	font-size: 15px;
-	border-bottom: 2px solid var(--grey);
 }
-.comments-area > .comments > .comments-num {
+.comments-close > .open-comments > div > .comments-num {
 	color: var(--text-dark-grey);
+}
+
+/* comments-open */
+.title-area.open-comments {
+	display: none;
+}
+.video-buttons.open-comments {
+	display: none;
+}
+.channel-area.open-comments {
+	display: none;
+}
+.next-video.open-comments {
+	display: none;
+}
+.comments-close.open-comments {
+	display: none;
+}
+
+.comments-open {
+	display: none;
+}
+.comments-open.open-comments {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #f9f9f9;
+}
+
+.comments-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 20px;
+	font-size: 10.5pt;
+	border-bottom: 1px solid var(--grey);
+	background: #fff;
+}
+.comments-header > a {
+	font-size: 24pt;
+	font-weight: 200;
+}
+
+.comments-add {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	padding: 10px;
+}
+.comments-input {
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	margin: 10px 0;
+}
+/* textarea 활성화 여부 */
+.simple-textarea {
+	width: 100%;
+	line-height: 55px;
+	padding-left: 10pt;
+	font-size: 10.5pt;
+	color: var(--text-dark-grey);
+	border: 1px solid var(--grey);
+}
+.comments-input > .textarea {
+	display: none;
+}
+.comments-buttons {
+	display: none;
+}
+.simple-textarea.active-textarea {
+	display: none;
+}
+.comments-input > .textarea.active-textarea {
+	display: unset;
+	width: 100%;
+	height: 65px;
+	font-size: 10.5pt;
+	background: #f9f9f9;
+	border: 1px solid var(--grey);
+	padding: 5px;
+}
+.comments-buttons.active-textarea {
+	display: unset;
+}
+.comments-buttons > button {
+	font-size: 10.5pt;
+	margin: 0 10px 10px 10px;
+}
+.comments-buttons > .ok {
+	color: var(--blue);
+}
+
+.comments-item {
+	padding: 20px 10px;
+	display: flex;
+	align-items: flex-start;
+	border-top: 1px solid var(--grey);
+}
+.comments-item > a {
+	padding: 10px 20px;
+	color: var(--text-grey);
+}
+.comments-item > .comment {
+	width: 100%;
+}
+.comments-item > .comment > div {
+	padding-bottom: 5px;
+	font-size: 9pt;
+	color: var(--text-dark-grey);
+}
+#comment-content {
+	font-size: 11pt;
+	color: #000;
+}
+#comment-info {
+	display: flex;
+	justify-content: flex-start;
+	font-size: 9pt;
+	color: var(--text-grey);
+}
+#comment-info > a {
+	padding-right: 12px;
+	font-size: 9pt;
+	color: var(--text-grey);
+}
+#comment-info > a > i {
+	padding: 0 5px;
+}
+.open-reply {
+	margin-left: 50px;
+	margin-bottom: 30px;
+	font-size: 11pt;
+	color: var(--blue);
 }
 
 /* next-video */
@@ -164,7 +308,7 @@ iframe {
 }
 .next-video > h3 {
 	margin: 12px;
-	font-size: 12pt;
+	font-size: 10.5pt;
 	font-weight: 400;
 }
 .next-video > .video-item {
