--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -38,10 +38,26 @@ button:hover {
 	outline: none;
 }
 
+.channel-img {
+	width: 35px;
+	min-width: 35px;
+	height: 35px;
+	margin-right: 10px;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.channel-img > img {
+	width: 35px;
+}
+
+
 /* header */
 header {
 	width: 100%;
 	height: 48px;
+	position: sticky;
+	top: 0;
+	z-index: 1;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -62,9 +78,11 @@ header > ul > li > a {
 
 /* video */
 .video-section {
-	position: relative;
+	position: sticky;
+	top: 48px;
 	width: 100%;
 	padding-bottom: 56.26%;
+	z-index: 1;
 }
 iframe {
 	position: absolute;
@@ -77,9 +95,12 @@ iframe {
 	margin: 10px;
 }
 .title-area > .hashtag {
+	display: flex;
+	align-items: center;
 	font-size: 10pt;
 }
-.title-area > .hashtag > a {
+.title-area > .hashtag > li > a {
+	padding: 0 2px;
 	color: var(--blue);
 }
 .title-area > .open-title {
@@ -129,6 +150,10 @@ iframe {
 .video-buttons > li > a > div {
 	font-size: 10pt;
 }
+/* 버튼 클릭 */
+.video-buttons > li > .click {
+	color: var(--blue);
+}
 
 /* channel-area */
 .channel-area {
@@ -142,17 +167,6 @@ iframe {
 	width: 100%;
 	display: flex;
 	align-items: center;
-}
-.channel-img {
-	width: 35px;
-	min-width: 35px;
-	height: 35px;
-	margin-right: 10px;
-	border-radius: 50%;
-	overflow: hidden;
-}
-.channel-img > img {
-	width: 35px;
 }
 .channel-info > .channel-title {
 	font-size: 10.8pt;
@@ -178,9 +192,6 @@ iframe {
 	color: var(--text-dark-grey);
 	border-bottom: 1px solid var(--grey);
 }
-.video-contents.open.open-comments {
-	display: none;
-}
 
 /* comments-close */
 .comments-close {
@@ -199,16 +210,10 @@ iframe {
 }
 
 /* comments-open */
-.title-area.open-comments {
+.info-section.open-comments {
 	display: none;
 }
-.video-buttons.open-comments {
-	display: none;
-}
-.channel-area.open-comments {
-	display: none;
-}
-.next-video.open-comments {
+.next-video-section.open-comments {
 	display: none;
 }
 .comments-close.open-comments {
@@ -220,9 +225,8 @@ iframe {
 }
 .comments-open.open-comments {
 	display: block;
-	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background: #f9f9f9;
 }
 
@@ -240,6 +244,9 @@ iframe {
 	font-weight: 200;
 }
 
+.comments-body {
+	overflow-y: auto;
+}
 .comments-add {
 	display: flex;
 	flex-direction: column;
@@ -291,20 +298,20 @@ iframe {
 	color: var(--blue);
 }
 
-.comments-item {
+.comment {
 	padding: 20px 10px;
 	display: flex;
 	align-items: flex-start;
 	border-top: 1px solid var(--grey);
 }
-.comments-item > a {
+.comment > a {
 	padding: 10px 20px;
 	color: var(--text-grey);
 }
-.comments-item > .comment {
+.comment > .comment-text {
 	width: 100%;
 }
-.comments-item > .comment > div {
+.comment > .comment-text > div {
 	padding-bottom: 5px;
 	font-size: 9pt;
 	color: var(--text-dark-grey);
@@ -336,49 +343,75 @@ iframe {
 
 /* next-video */
 .next-video-section {
-	padding: 8px;
+	padding: 10px;
 }
 .next-video-section > h3 {
 	margin: 12px;
 	font-size: 10.5pt;
 	font-weight: 400;
 }
-.next-video-section > .video-item {
-	margin: 12px;
-	width: 500px;
-	height: 500px;
+.next-video-list {
+	display: flex;
+	flex-direction: column;
 }
-.next-video-thumbnail {
-	width: 220px;
-	height: 147px;
-	line-height: 147px;
+.next-video-item {
+	display: flex;
+	flex-direction: column;
+	margin: 12px;
+}
+.next-video-item > .next-video-thumbnail {
+	flex: 1 1 70%;
+	position: relative;
+	width: 100%;
+	padding-bottom: 56.26%;
 	background: #000;
 	overflow: hidden;
 }
-.next-video-thumbnail > img {
-	width: 220px;
-	vertical-align: middle;
+.next-video-item > .next-video-thumbnail > img {
+	position: absolute;
+	width: 100%;
 }
-.next-video-meta {
-	width: 220px;
+.next-video-item > .next-video-meta {
+	flex: 1 1 30%;
 	margin-top: 10px;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 }
-.next-video-info {
+.next-video-item > .next-video-meta > .next-video-info {
 	display: flex;
-	justify-content: flex-start;
-	align-items: center;
+	width: 100%;
 }
-.next-video-info > .title > .video-title {
-	width: 150px;
+.next-video-channel-img {
+	flex: 1 1 12%;
+	position: relative;
+	width: 100%;
+	min-width: 35px;
+	margin-right: 10px;
+	overflow: hidden;
+}
+.next-video-channel-img > img {
+	position: absolute;
+	width: 100%;
+	border-radius: 50%;
+}
+.next-video-item > .next-video-meta > .next-video-info > .title {
+	flex: 1 1 80%;
+}
+.next-video-item > .next-video-meta > .next-video-info > .title > .next-video-title {
 	font-size: 11pt;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
 }
-.next-video-info > .title > .channel-title {
-	font-size: 9pt;
-	color: var(--text-grey)
-}
-.next-video-meta > a {
+.next-video-item > .next-video-meta > .next-video-info > a {
+	flex: 1 1 8%;
+	display: flex;
+	justify-content: center;
 	padding: 5px;
-	margin-left: 15px;
+}
+.next-video-item > .next-video-meta > .next-video-info > .title > .channel-title {
+	font-size: 9pt;
+	padding: 5px 0;
+	color: var(--text-grey)
 }
