--- a/clone-coding/youtube/video-controls.css
+++ b/clone-coding/youtube/video-controls.css
@@ -1,42 +1,55 @@
-figure {
-	max-width:64rem;
-	width:100%;
-	max-height:30.875rem;
-	height:100%;
-	margin:1.25rem auto;
-	padding:1.051%;
-	background-color:#666;
- }
-
 .controls {
 	width:100%;
-	height:8.0971659919028340080971659919028%; /* of figure's height */
-	position:relative;
+	height: 100%;
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
-
 .controls[data-state=hidden] {
 	display:none;
 }
-
 .controls[data-state=visible] {
-	display:block;
+	display:flex;
 }
 
-.controls > * {
-	float:left;
-	width:3.90625%;
-	height:100%;
-	margin-left:0.1953125%;
-	display:block;
+.controls-top {
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+}
+.controls-top > * {
+	padding: 14px;
 }
 
-.controls > *:first-child {
-	margin-left:0;
+.controls-mid {
+	width: 100%;
+	min-width: fit-content;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.controls-mid > * {
+	padding: 10px;
+	margin: 0 20px;
+	font-size: 1.8em;
+}
+#playpause {
+	font-size: 2.5em;
 }
 
-.controls .progress {
-	cursor:pointer;
-	width:75.390625%;
+.controls-bottom {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+.controls-bottom > * {
+	padding: 14px;
+	color: #fff;
+	font-size: 0.8em;
+}
+#duration {
+	opacity: 0.8;
 }
 
 .controls button {
@@ -45,47 +58,52 @@ figure {
 	background:transparent;
 	background-size:contain;
 	background-repeat:no-repeat;
+	opacity: 0.8;
+	color: #fff;
+}
+.controls button:hover {
+	opacity:1;
+}
+.controls button[data-state="play"] > #playbutton {
+	display: none;
+}
+.controls button[data-state="pause"] > #pausebutton {
+	display: none;
 }
 
-.controls button:hover, .controls button:focus {
-	opacity:0.5;
-}
-
-.controls button[data-state="play"] {
-	background-image: url('data:image/png;base64,iVBORw0KGgoAAA ... ');
-}
-
-.controls button[data-state="pause"] {
-	background-image: url('data:image/png;base64,iVBORw0KGgoAAA ... ');
-}
-
-.controls progress {
-	display:block;
+.controls .progress {
 	width:100%;
-	height:81%;
-	margin-top:0.125rem;
-	border:none;
-	color:#0095dd;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	border-radius:2px;
+	height: 2px;
+	position: absolute;
+	bottom: -2px;
+	cursor:pointer;
+	background: var(--dark-grey);
 }
-
-.controls progress[data-state="fake"] {
-	background:#e6e6e6;
-	height:65%;
+#progress-bar-line {
+	width: calc(100% - 12px);
+	height: 4px;
+	position: absolute;
 }
-.controls progress span {
-	width:0%;
-	height:100%;
-	display:inline-block;
-	background-color:#2a84cd;
+#progress-bar-line > #progress-bar{
+	width: 0;
+	height: 100%;
+	position: absolute;
+	padding-left: 11px;
+	background: var(--red);
 }
-
-.controls progress::-moz-progress-bar {
-	background-color:#0095dd;
- }
-
-.controls progress::-webkit-progress-value {
-	background-color:#0095dd;
+#progress-bar-line > #progress-bar > #playhead {
+	width: 23px;
+	height: 23px;
+	position: absolute;
+	top: -9px;
+	right: -6px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#progress-bar-line > #progress-bar > #playhead > #playhead-dot{
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background: var(--red);
 }
