--- a/clone-coding/youtube/video-controls.css
+++ b/clone-coding/youtube/video-controls.css
@@ -2,21 +2,35 @@
 	width:100%;
 	height: 100%;
 	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	align-items: center;
+	background: rgba(0, 0, 0, 30%);
+	transition: opacity .5s;
 }
-.controls[data-state=hidden] {
-	display:none;
+.controls[data-state=hidden]{
+	opacity: 0;
 }
-.controls[data-state=visible] {
-	display:flex;
+.controls[data-state=visible]{
+	opacity: 1;
 }
+.controls[data-state=hidden] > * {
+	display: none;
+}
+.controls[data-state=visible] > * {
+	display: flex;
+}
+
 
 .controls-top {
 	width: 100%;
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 }
 .controls-top > * {
 	padding: 14px;
@@ -42,6 +56,7 @@
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 .controls-bottom > * {
 	padding: 14px;
@@ -58,11 +73,7 @@
 	background:transparent;
 	background-size:contain;
 	background-repeat:no-repeat;
-	opacity: 0.8;
 	color: #fff;
-}
-.controls button:hover {
-	opacity:1;
 }
 .controls button[data-state="play"] > #playbutton {
 	display: none;
@@ -114,4 +125,35 @@ html:-ms-fullscreen {
 }
 :-webkit-full-screen {
 	background-color:transparent;
+}
+
+body[data-fullscreen=true] header{
+	display: none;
+}
+body[data-fullscreen=true] > .video-section {
+	width: 100%;
+	height: auto;
+	padding: 0;
+}
+body[data-fullscreen=true] > .video-section > video {
+	width: 100%;
+	height: 100%;
+}
+body[data-fullscreen=true] > .video-section > .controls > .progress {
+	bottom: 6%;
+}
+body[data-fullscreen=true] > .video-section > .controls > .controls-top {
+	margin-top: 3%;
+}
+body[data-fullscreen=true] > .video-section > .controls > .controls-bottom {
+	margin-bottom: 5%;
+}
+body[data-fullscreen=true] > .info-section{
+	display: none;
+}
+body[data-fullscreen=true] > .comment-section{
+	display: none;
+}
+body[data-fullscreen=true] > .next-video-section{
+	display: none;
 }
