--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -84,15 +84,24 @@ header > ul > li > a {
 	top: 48px;
 	z-index: 1;
 }
-.video-section > .video-screen {
+.video-section > .video {
 	width: 100%;
 	padding-bottom: 56.26%;
 }
-.video-section > .video-screen > #video {
+.video-section > .video > #video {
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	background: #000;
+}
+.video-section > .video > #video-screen {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: none;
+}
+.video-section > .video > #video-screen[data-state=visible] {
+	display: block;
 }
 
 /* title-area */
