--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -452,6 +452,8 @@ header > ul > li > a {
 	.video-section {
 		width: -webkit-calc(100% - 256px);
 		width: calc(100% - 256px);
+		display: block;
+		position: relative;
 		top: 0;
 		z-index: 0;
 	}
