fix next-video h3 in wide screen

--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -488,6 +488,7 @@ header > ul > li > a {
 		overflow-y: auto;
 	}
 	.next-video-section > h3 {
+		padding: 0;
 		margin: 12px;
 	}
 	.next-video-section > .next-video-list {
