--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -356,6 +356,7 @@ header > ul > li > a {
 	color: var(--text-grey);
 }
 #comment-info > a {
+	min-width: fit-content;
 	padding-right: 12px;
 	font-size: 9pt;
 	color: var(--text-grey);
