--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -18,7 +18,7 @@ body {
 	min-width: 200px;
 	margin: 0;
 	color: #000;
-	font-family: 'Roboto', 'Nanum Gothic Coding', sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 	overflow-x: hidden;
 }
 
