--- a/clone-coding/youtube/YouTube.css
+++ b/clone-coding/youtube/YouTube.css
@@ -13,7 +13,6 @@
 	-khtml-user-select: none;
 	user-select:none;
 }
-
 body {
 	min-width: 200px;
 	margin: 0;
@@ -21,18 +20,15 @@ body {
 	font-family: 'Roboto', Arial, sans-serif;
 	overflow-x: hidden;
 }
-
 a {
 	text-decoration: none;
 	color: #000;
 }
-
 ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
 }
-
 button {
 	border: none;
 	background: none;
@@ -40,7 +36,6 @@ button {
 button:hover {
 	cursor: pointer;
 }
-
 :focus {
 	outline: none;
 }
@@ -171,7 +166,7 @@ header > ul > li > a {
 .video-buttons > li > a > div {
 	font-size: 10pt;
 }
-/* 버튼 클릭 */
+/* video-buttons 클릭 */
 .video-buttons > li > .click {
 	color: var(--blue);
 }
@@ -327,6 +322,7 @@ header > ul > li > a {
 	color: var(--blue);
 }
 
+/* 댓글 아이템 */
 .comment {
 	padding: 20px 10px;
 	display: flex;
