--- a/clone-coding/youtube/ad.css
+++ b/clone-coding/youtube/ad.css
@@ -32,10 +32,20 @@
 }
 
 /* ad under video */
-/* .ad-under-video {
+.ad-under-video {
 	width: 100%;
-	height: 100%
+	height: 100%;
 	position: absolute;
-	top: -4px;
-	background: chartreuse;
-} */
+	top: -10px;
+	padding-bottom: 10px;
+}
+
+.ad-under-video > .under-ad[data-state="visible"] {
+	display: block;
+	width: 100%;
+	height: 100%;
+	background: #000;
+}
+.ad-under-video > .under-ad {
+	display: none;
+}
