--- a/clone-coding/youtube/ad.css
+++ b/clone-coding/youtube/ad.css
@@ -44,3 +44,15 @@
 .ad-under-video{
 	display: none;
 }
+
+/* ad pre video */
+.ad-pre-video {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: chartreuse;
+}
