--- a/clone-coding/youtube/ad.css
+++ b/clone-coding/youtube/ad.css
@@ -54,5 +54,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: chartreuse;
+	background: #fff;
+	color: #000;
+	font-size: 14pt;
 }
